Compiler/tests/bad/Vectors/03_vector.rs
fn main(){
    let x : Vec<bool> = vec![true, 5, 5];
}